# End-to-End-Chest-Cancer-Classification-using-MLflow-DVC

./: .gitignore  .pdm-python  INSTRUCTIONS.md  README.md  dagshub_env.py  generate_requirements_from_pdm_toml.py  main.py  pyproject.toml  requirements.txt  scores.json  setup.py
.trunk/: trunk.yaml
mlruns/0/: meta.yaml
mlruns/0/1e90f3f38c7444fdbb35632f3168d8a3/: meta.yaml
mlruns/0/1e90f3f38c7444fdbb35632f3168d8a3/artifacts/model/: MLmodel  conda.yaml
mlruns/0/1e90f3f38c7444fdbb35632f3168d8a3/metrics/: accuracy  loss
mlruns/0/1e90f3f38c7444fdbb35632f3168d8a3/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
mlruns/0/6828a5be36954eeaa4c60f8774abab21/: meta.yaml
mlruns/0/6828a5be36954eeaa4c60f8774abab21/artifacts/model/: MLmodel
mlruns/0/6828a5be36954eeaa4c60f8774abab21/metrics/: accuracy  loss
mlruns/0/6828a5be36954eeaa4c60f8774abab21/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/92c1981aff3f431e8bfaeae6472cc22e/: meta.yaml
mlruns/0/92c1981aff3f431e8bfaeae6472cc22e/artifacts/model/: MLmodel  requirements.txt
mlruns/0/92c1981aff3f431e8bfaeae6472cc22e/metrics/: accuracy  loss
mlruns/0/92c1981aff3f431e8bfaeae6472cc22e/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
research/: 01_data_ingestion.ipynb  02_prepare_base_model.ipynb  03_model_trainer.ipynb  04_model_evaluation_with_mlflow.ipynb  trials.ipynb
src/cnnClassifier/components/: model_trainer.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/pipeline/: stage_02_prepare_base_model.py
src/cnnClassifier/utils/: common.py
terrafrom/: mani.tf
