[project]
name = "cnnClassifier"
version = "0.0.0"
description = "A small python package for CNN app"
authors = [
    {name = "gregorywmorris", email = "gwm1980@gmail.com"},
    {name = "entbappy", email = "entbappy73@gmail.com"},
]
dependencies = [
    "cdown>=0.1.0",
    "numpy>=1.23.5",
    "scapy>=2.5.0",
    "flask>=3.0.3",
    "python-box>=7.2.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.1",
    "dvc>=3.51.2",
    "pandas>=2.2.2",
    "ipykernel>=6.29.5",
    "toml>=0.10.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[project.urls]
Homepage = "https://github.com/entbappy/Chest-Cancer-Classification-Project"
"Bug Tracker" = "https://github.com/entbappy/Chest-Cancer-Classification-Project/issues"
[tool.pdm]
distribution = false
package-dir = "src"
