[project]
name = "cnnClassifier"
version = "0.0.0"
description = "A small python package for CNN app"
authors = [
    {name = "gregorywmorris", email = "gwm1980@gmail.com"}
]
dependencies = [
    "cdown>=0.1.0",
    "numpy>=1.23.5",
    "flask>=3.0.3",
    "python-box>=7.2.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.1",
    "dvc>=3.51.2",
    "pandas>=2.2.2",
    "ipykernel>=6.29.5",
    "dagshub>=0.3.29",
    "tensorflow[and-cuda]>=2.16.2",
    "notebook>=7.0.8",
    "tqdm>=4.66.4",
    "ensure>=1.0.4",
    "types-PyYAML>=6.0.12.20240311",
    "Flask-Cors>=4.0.1",
    "scipy>=1.14.0",
    "joblib>=1.4.2",
    "mlflow>=2.14.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/gregorywmorris/End-to-End-Chest-Cancer-Classification-using-MLflow-DVC"
bug-tracker = "https://github.com/gregorywmorris/End-to-End-Chest-Cancer-Classification-using-MLflow-DVC/pulls"

[tool.pdm]
distribution = false
package-dir = "src"

[tool.pdm.dev-dependencies]
dev = [
    "toml>=0.10.2",
    "gdown>=5.2.0",
]
